[gd_scene load_steps=8 format=1]

[ext_resource path="res://GAME/SCRIPTS/Battle/Battle_InfoBar.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/GFX/Game/Battle/Others/Info_00.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/LANG/TEXT/Fonts/Noto.fnt" type="BitmapFont" id=3]
[ext_resource path="res://ASSETS/SE/System/Infos.wav" type="Sample" id=4]


[sub_resource type="Animation" id=3]

resource/name = "Info_Popup"
length = 0.23
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Swish:play/play")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ "Infos" ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Info_00:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 0.23 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( -800, 0 ), Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=7]

resource/name = "Info_Unpop"
length = 0.23
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Info_00:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.23 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( -800, 0 ) ] }

[sub_resource type="SampleLibrary" id=22]

samples/Infos = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }

[node name="InfoBar" type="Node"]

script/script = ExtResource( 1 )

[node name="Info_00" type="Sprite" parent="."]

transform/pos = Vector2( -800, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Info_Label" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 48.0
margin/right = 409.0
margin/bottom = 63.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="Info_Popup" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Info_Popup = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Info_Unpop" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Info_Unpop = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Swish" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 22 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


